/*
 * Copyright 2021 - 2024 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package statsinfo;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/statsinfo";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message ShuffleHeap {
  ShuffleHeap Left = 1;
  ShuffleHeap Right = 2;
  double Key = 3;
  double Value = 4;
  int32 Height = 5;
  int32 Sz = 6;
  int32 Nulls = 7;
  bool Reverse = 8;
}

message ShuffleRange {
  bool IsStrType = 1;
  int32 Sz = 2;
  ShuffleHeap Tree = 3;
  double Min = 4;
  double Max = 5;
  repeated bytes Mins = 6;
  repeated bytes Maxs = 7;
  repeated int32 Rows = 8;
  repeated int32 Nulls = 9;
  int32 MaxLen = 10;
  repeated bool Flags = 11;
  double Overlap = 12;
  double Uniform = 13;
  repeated double Result = 14;
}

message StatsInfo {
  map<string, double> NdvMap = 1;
  map<string, double> MinValMap = 2;
  map<string, double> MaxValMap = 3;
  map<string, uint64> DataTypeMap = 4;
  map<string, uint64> NullCntMap = 5;
  map<string, uint64> SizeMap = 6;
  map<string, ShuffleRange> ShuffleRangeMap = 7;
  int32 BlockNumber = 8;
  int32 AccurateObjectNumber = 9;
  int32 ApproxObjectNumber = 10;
  double TableCnt = 11;
  string TableName = 12;
}

message StatsInfoKey {
  uint64 DatabaseID = 1;
  uint64 TableID = 2;
}

message StatsInfoKeys {
  repeated StatsInfoKey Keys = 1 [(gogoproto.nullable) = false];
}